<resources>

    <string name="app_name">Chop that Word</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Chop that Word</string>
    <string name="image_splashMindsnacks">Splash image</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="btn_play">Play!</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="btn_help">Help</string>
    <string name="img_main_logo">Main logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game_screen">Chop that Word</string>

</resources>