<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#73b539" >

    <Button
        android:id="@+id/button_main_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_settings"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button_main_settings"
        android:layout_marginTop="200dp"
        android:onClick="startGame"
        android:text="@string/btn_play" />

    <Button
        android:id="@+id/button_main_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_main_play"
        android:layout_centerHorizontal="true"
        android:onClick="changeSettings"
        android:text="@string/btn_settings" />

    <Button
        android:id="@+id/button_main_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_settings"
        android:layout_alignRight="@+id/button_main_settings"
        android:layout_below="@+id/button_main_settings"
        android:onClick="explainControls"
        android:text="@string/btn_help" />

    <Button
        android:id="@+id/button_main_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_help"
        android:layout_alignRight="@+id/button_main_help"
        android:layout_below="@+id/button_main_help"
        android:onClick="explainGame"
        android:text="@string/btn_about" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/npuzzle" android:contentDescription="@string/img_main_logo"/>

</RelativeLayout>